--- a/front-end/notes.html
+++ b/front-end/notes.html
@@ -41,6 +41,6 @@
         </div>
       </div>
     </div>
-    <script src="/assets/js/index.js"></script>
+    <script src="/front-end/assets/js/index.js"></script>
   </body>
 </html>
